MP2-2278 fixed alignment and translation toggle, activity header section C.4 and hide work plan tab for no data

--- a/jems-ui/src/app/project/work-package/project-work-package-page/work-package-detail-page/project-work-package-activities-tab/project-work-package-activities-tab.component.scss
+++ b/jems-ui/src/app/project/work-package/project-work-package-page/work-package-detail-page/project-work-package-activities-tab/project-work-package-activities-tab.component.scss
@@ -6,5 +6,21 @@
     margin-left: -0.75rem;
     margin-top: -0.75rem;
     background-color: var(--light-blue-gray);
+
+    h4.activity-header-inner {
+      :first-child {
+        flex: auto;
+        flex-grow: 0;
+      }
+      :last-child {
+        flex-grow: 1;
+        word-break: break-word;
+      }
+    }
+
+    button {
+      flex-basis: 3em;
+      flex-grow: 0;
+    }
   }
 }
